# ai_assisted_vulkan

./: AGENTS.md  CMakeLists.txt  README.md  main.cpp
shaders/: ball.vert
